# RestAPI

./: .gitignore  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml
data/: brands.json  categories.json  products.json
migrations/: alembic.ini  env.py
migrations/versions/: 2024_09_17_21:48-63a107752874_.py  2024_09_17_22:02-fad7daadf385_.py  2024_09_17_22:07-51e9149d830d_.py  2024_09_17_22:21-cc6febb91d60_.py  2024_09_17_22:31-4d75f8cc00f6_.py  2024_09_22_03:34-7452bb616b12_.py  2024_09_23_13:53-d45e7bb6e2fa_.py
migrations/versions/backup/: 2024_09_17_21:35-360c3bb895a4_.py  2024_09_19_23:22-25379fc929c5_.py  2024_09_22_03:15-00132cebbc53_.py
src/: __init__.py  config.py  main.py
src/brands/: models.py
src/categories/: models.py
src/core/: cli.py
src/core/cli/: __init__.py  cli.py  utils.py
src/core/db/: __init__.py  database.py  mixins.py  models.py
src/core/exceptions/: exp.py  handler.py
src/countries/: models.py
src/models/: __init__.py
src/products/: crud.py  models.py  routers.py  schemas.py
tests/: conftest.py  test_api.py
tests/test_products/: test_api.py  test_cli.py  test_routers.py
tests/test_products/fake_data/: categories.json  products.json
tests/utils/: base.py
