[tool.poetry]
name = "Product API"
version = "0.1.0"
description = ""
authors = ["kostya12362", "coldman"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["full"], version = "0.115.0"}
alembic = "1.13.2"
sqlalchemy = "2.0.35"
uvicorn = "0.30.6"
pydantic-settings = "2.5.2"
asyncpg = "0.29.0"
fastapi-cli = "0.0.5"
python-dotenv = "1.0.1"
asyncio = "3.4.3"
greenlet = "3.1.1"
loguru = "0.7.2"
typer = "0.12.5"
python-multipart = "0.0.10"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-mock = "3.14.0"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"